[package]
name = "my-axum-project"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
http-body-util = "0.1.0"
mime = "0.3.17"
serde_json = "1.0.114"
tower = "0.4.13"
